style.css
:root {
    --main_color: #8bb0f9;
    --secondary_color: #072d88;
    --accent_color: #1bc123;
    --accent_color_negative: #BF1A2F;
    --text_color: #fafafa;
    --background_color: #050505;

    --end_rotation: 3600deg;
    --start_rotation: 0deg;
    --spin_speed: 5s;

    --circle_size: 90vh;
}

* {
    font-family: 'Signika Negative', sans-serif;
    color: var(--text_color);
    padding: 0;
    margin: 0;
}

body {
    background-color: var(--background_color);
    overflow: hidden;
}

nav {
    background-color: var(--main_color);
    height: 10vh;
    padding: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

nav>* {
    margin: 0 20px;
}

nav>h1 {
    align-self: center;
    justify-self: left;
}

.buttons {
    /*align to the right side*/
    margin-left: auto;
}

.button {
    margin-left: 20px;
    background-color: var(--accent_color);
    color: var(--text_color);
    border: none;
    border-radius: 5px;
    padding: 10px;
    font-size: 1.2rem;
    cursor: pointer;
    transition: all 0.5s;
}

.button:hover {
    background-color: var(--secondary_color);
}

.remove_ghost {
    background-color: var(--accent_color_negative);
    /*More reddish*/
    margin: 0 !important;
}

main {
    height: 90vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.wheel {
    width: var(--circle_size);
    height: var(--circle_size);
    /* background-color: red; */
}

.wheel>canvas {
    height: 100%;
    width: 100%;
    margin: 0px;
    /* background-color: var(--background_color); */
    border-radius: 100%;
}

.rotate {
    animation: calmRotation 5s linear infinite;
    transform-origin: center;
}

.spin {
    animation: spinRotation var(--spin_speed) ease-in-out 1 forwards;
    transform-origin: center;
}

@keyframes calmRotation {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(1turn);
    }
}

@keyframes spinRotation {
    from {
        transform: rotate(--start_rotation);
    }

    to {
        transform: rotate(var(--end_rotation));
    }
}

.needle {
    width: var(--circle_size);
    height: var(--circle_size);
    position: absolute;
    z-index: 1;
}

.needle>canvas {
    height: 100%;
    width: 100%;
    margin: 0px;
    border-radius: 100%;
}


/* Part to select ghosts by evidence */
.ghost_and_evidence_selection {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: var(--main_color);
    width: 100%;
    height: 100%;
}

.evidence_window {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 40%;
    height: 100%;
    background-color: var(--background_color);
}

.evidence_window>div {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}

.evidence {
    background-color: var(--main_color);
    padding: 5px;
}

.ghost_selection {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 60%;
    height: 100%;
    background-color: var(--background_color);
    border-left: 1px solid white;
}

.ghost_selection>div {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
}

.ghost {
    padding: 10px;
    margin: 10px;
    width: 60%;
    background-color: var(--main_color);
    text-align: center;
}

.ghost:hover {
    background-color: var(--secondary_color);
    transition: all 0.2s;

}

/* End of ghost selection part */

.PopUp {
    display: none;
    position: absolute;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.5);
    cursor: pointer;
    z-index: 2;
}

.Winning_Ghost {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 25px;
    background-color: var(--main_color);
    border-radius: 10px;
    box-shadow: 10px 10px var(--secondary_color);
}

.winning_ghost_evidence {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    padding: 10px;
    margin: 10px;
}

.winning_ghost_evidence>* {
    margin: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.winning_ghost_evidence>*>img {
    width: 24px;
    height: 24px;
}

.Settings {
    display: none;
    /* Center on y-axis and column */
    background-color: var(--main_color);
    width: 50vw;
    height: 80vh;
    border-radius: 10px;
    border: 3px solid var(--main_color);
    box-shadow: 10px 10px var(--secondary_color);
    flex-direction: column;
    align-items: center;
    padding: 10px;
    overflow-y: scroll;
}

.evidence_popup {
    margin: 0;
    margin-right: 5px !important;
}


/* The evidence setup selection */
.Select_Evidence {
    width: 45vw;
    padding: 25px;
    background-color: var(--main_color);
    border-radius: 10px;
    border: 1px solid var(--secondary_color);
    box-shadow: 10px 10px var(--secondary_color);
    display: flex;
    flex-direction: column;
    position: absolute;
    z-index: 5;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.evidence {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 10px;
}

.evidence>* {
    margin: 0;
}

.Current_Evidence {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.evidence_select {
    margin-top: 5px;
    background-color: var(--main_color);
}

.Confirm_Evidence {
    display: flex;
    flex-direction: row;
    justify-content: center;
}



/* The popup that shows up asking users for confirmation: */
.ConfirmSelectionPopUp {
    position: absolute;
    padding: 10px;
    display: none;
    flex-direction: column;
    align-items: center;
    border-radius: 5px;
    box-shadow: 5px 5px var(--secondary_color);
    border: 3px solid var(--secondary_color);
    background-color: var(--main_color);
}

table {
    height: 100%;
    padding: 10px;
    margin: 10px;
    text-align: center
}

.legend>th {
    border-bottom: 2px solid var(--secondary_color);
    margin-bottom: 10px;
}

.page_colors {
    width: 70%;
}

.setting_buttons {
    bottom: 10%;
    margin: 10px;
}

.ghost_name {
    background-color: var(--secondary_color);
    border: none;
    padding: 5px;
}

.SpinSpeed {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10px;
}

.SpinSpeed>input {
    width: 100%;
    accent-color: var(--accent_color);
}

